# rl-breakout

./: .gitignore  README.md  README2.md  config.yaml  copymain.py  main.py  pyproject.toml  replay.py  test.py  utils.py  visualize.py
agent/: agent.py  env.py  memory.py  model.py
model/C51/: config.yaml
model/C51/logs/: eval.csv  train.csv
model/C51_2/logs/: eval.csv  train.csv
model/C51_3/logs/: eval.csv  train.csv
model/D3QN/: config.yaml
model/D3QN/logs/: copy  eval.csv  train.csv
model/D3QN2/logs/: eval.csv  train.csv
model/D3QN3/logs/: eval.csv  train.csv
model/D3QN4/logs/: eval.csv  train.csv
model/D3QNPenalty/: config.yaml
model/D3QNPenalty/logs/: eval.csv  train.csv
model/FineTune/logs/: eval.csv  train.csv
